# embeddedTwirtee

./: ..gitignore.swp  .clang-format  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  core  debug.mkv  git.sh  launch.sh  main.c  makefile  map.json  output.nodes  trajectory.json
Aurix code/aurix_t/: Can.c  Measurements.c  Measurements.h  Misc.h  PID.h  app_Serial.c  common.c  common.h
Aurix code/aurix_t/COM/: guidance_mgr.c  guidance_mgr.h  localization.c  speed_selection.c
Aurix code/aurix_t/Main/: 00.c  Cpu0_Main.c  Cpu1_Main.c  Cpu_Common.h  twirtee.h
Aurix code/aurix_t/html/: Misc_8h_source.html  PID_8h_source.html  annotated.html  app__Serial_8h_source.html  classes.html  files.html  md_README.html  pages.html
Aurix code/jsonDijkstra/: trajectory.json
Aurix code/kalman/: com.h  makefile  parametres.c
Aurix code/short_path/: makefile
_/include/: com.h  dijkstra.h  header.h  twirtee.h
_/src/: dijkstra.c  functions.c  jsmn.c  main.c  main2.c
bandMaster/: CMakeLists.txt  Makefile  Real_main.c  apply_changes.sh  debug_main.c  gen_makefile  launch.sh  loc_thread  log.txt  main.1.c  main.c  main_debug.c  make.sh  makefile  makefile_old  makeme.sh  mysimu  shell.sh
bandMaster/compile/objdump/: libcrypt.a.objdump  libexpat.a.objdump  libffi_pic.a.objdump  libz.a.objdump
bandMaster/include/: com_service.h  config.h  dijkstra.h  jsonApi.h  kalman.h  loc_thread.h  mat.h  misc.h  platform_types.h  segment.h  simulator.h  spf_thread.h  threads_mgr.h  twirtee.h
bandMaster/include/DWM_api/matiere_premiere/: makefile  pooshock.ru.url
bandMaster/include/io_com_service/: bits.c  io  io_com_service  io_com_service.c  io_com_service.h  io_service_config.json  test_io_receive_can.c  test_io_send_can.c  var_id.h
bandMaster/include/io_com_service/DWM_api/dwm1001_host_api/platform/rpi/hal/: hal_uart.c
bandMaster/include/io_com_service/DWM_api/matiere_premiere/loc_api/: loc_thread.h
bandMaster/include/io_com_service/DWM_api/matiere_premiere/src/: loc_thread.c  main.c
bandMaster/include/io_com_service/linux-can-utils/: cantest.c  read_can.c  read_can.h  write_can.c  write_can.h
bandMaster/include/io_com_service/tests/: io  test_io_send_can.c
bandMaster/include/linux-can-utils/: cantest  read_can.c  read_can.h  write_can.c  write_can.h
bandMaster/include/loc_api/include/: dwm1001.mak
bandMaster/include/loc_api/platform/rpi/hal/: hal.c  hal.h  hal_uart.c
bandMaster/include/simulator/: Makefile  a.out  com.h  guidance_mgr.c  guidance_mgr.h  kanayama.h  libanl.a.objdump  libieee.a.objdump  libutil.a.objdump  main.c  measurement_randomization.c  measurement_randomization.h  mysimu  mysimu.map  parametres.c  segment.c  shell.sh  simulator.c  simulator.h  threads_mgr.c
bandMaster/include/simulator/compile/: a.out
bandMaster/include/simulator/include/: simulator.h
bandMaster/include/simulator/objdump/: libc_nonshared.a.objdump  libmcheck.a.objdump  libnsl.a.objdump  libpthread_nonshared.a.objdump  librt.a.objdump  mysimu.objdump
bandMaster/include/simulator/src/: segment.c  simulator.c  threads_mgr.c
bandMaster/objdump/: libc.a.objdump  libdl.a.objdump  libexpatw.a.objdump  libffi.a.objdump  libfreetype.a.objdump  libg.a.objdump  libieee.objdump  libm.a.objdump  libmnl.a.objdump  libpng16.a.objdump  libpthread.a.objdump  libresolv.a.objdump  libtic.a.objdump  libtinfo.a.objdump
bandMaster/old_bandmaster/include/: kalman.h  mat.h
bandMaster/old_bandmaster/include/simulator/compile/: Makefile_vincent  mysimu.map
bandMaster/old_bandmaster/include/simulator/include/: mat.h
bandMaster/old_bandmaster/include/simulator/objdump/: libpython2.7.a.objdump
bandMaster/old_bandmaster/include/simulator/src/: measurement_randomization.c
bandMaster/old_bandmaster/src/: _test_.c  loc_thread.c  mat.c
bandMaster/output_txt/: mission.txt  out_tracking.txt  path.txt  plot.py
bandMaster/output_txt/old/: out_tracking.txt  out_tracking_0.txt  out_tracking_1 100.txt
bandMaster/res/: map.json
bandMaster/src/: dijkstra.c  guidance_mgr.c  jsonApi.c  kalman.c  kanayama.c  loc_thread.c  localization.c  main.c  main_dwm.c  mat.c  measurement_randomization.c  misc.c  mission_mgr.c  parametres.c  simulator.c  speed_selection.c  spf_thread.c  spf_thread_old.c  threads_mgr.c
bandMaster/temp/: output.nodes  tree.txt
bandMaster/threads/localisation/: Generic_makefile
bandMaster/threads/localisation/map2json/: Balise.py  Line_t.py  xy.txt
bandMaster/threads/map2json/: WPT.py
bandMaster/threads/short_path/: launch.sh  makefile  output.nodes
bandMaster/threads/short_path/res/: map.json
include/: dijkstra.h  jsonApi.h  mission_mgr.h  parametres.h  twirtee.h
kalman/: parametres.h
linux-can-utils/: cantest
localisation/: loc_thread  log.txt  makefile
localisation/include/: loc_thread.h
localisation/loc_api/: loc_thread.h  twirtee.h
localisation/src/: loc_thread.c  main.c
map2json/: Fonctions_extraction.py  Fonctions_extraction2.py  Leg.py  main_extraction.py  xy.xlsx
old_pieces_of_code/Simulations/: Simu_trilateration.ipynb
old_pieces_of_code/aurix_t/: Can.h  Misc.c  PID.c  README.md  app_Serial.h
old_pieces_of_code/jsonDijkstra/: LICENSE  launch.sh  output.txt
old_pieces_of_code/kalman/: kalman.c  platform_types.h  twirtee.h
old_pieces_of_code/linux-can-utils/: cantest.c
old_pieces_of_code/localisation/: loc_thread  makefile
old_pieces_of_code/short_path/: LICENSE  README.md
python_tools/map2json/: Point_t.py
raspi code/: Makefile  main_can.c
raspi code/compile/: a.c  libutil.readelf  out_tracking.txt  shell_maker.sh
raspi code/include/: can.h  kalman.h  kanayama.h  measurement_randomization.h  parametres.h  segment.h  spf_thread.h  twirtee.h
raspi code/src/: can.c  dijkstra.c  guidance_mgr.c  jsonApi.c  kalman.c  localization.c  misc.c  segment.c  simulator.c  threads_mgr.c
short_path/include/: jsonApi.h  spf_thread.h
short_path/src/: kalman.c  main.c
src/: dijkstra.c  jsonApi.c  main.c
threads/map2json/: Arc_t.py  Fonctions_extraction.py
threads/short_path/: makefile  output.nodes
(+68 files in other folders)
