cmake_minimum_required(VERSION 3.13)
project(bandMaster C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(include/DWM_api/matiere_premiere/loc_api)
include_directories(include/DWM_api/matiere_premiere/loc_api/dwm_driver/lmh)
include_directories(include/DWM_api/matiere_premiere/loc_api/include)
include_directories(include/DWM_api/matiere_premiere/loc_api/platform/rpi/hal)
include_directories(include/linux-can-utils)
include_directories(include/linux-can-utils/include)
include_directories(include/linux-can-utils/include/linux)
include_directories(include/linux-can-utils/include/linux/can)
include_directories(include/linux-can-utils/include/socketcan)
include_directories(include/linux-can-utils/include/socketcan/can)

add_executable(bandMaster
        compile/a.c
        include/DWM_api/matiere_premiere/loc_api/dwm_driver/dwm_api/dwm_api.c
        include/DWM_api/matiere_premiere/loc_api/dwm_driver/lmh/lmh.c
        include/DWM_api/matiere_premiere/loc_api/dwm_driver/lmh/lmh.h
        include/DWM_api/matiere_premiere/loc_api/dwm_driver/lmh/lmh_spirx.c
        include/DWM_api/matiere_premiere/loc_api/dwm_driver/lmh/lmh_spirx.h
        include/DWM_api/matiere_premiere/loc_api/dwm_driver/lmh/lmh_spirx_drdy.c
        include/DWM_api/matiere_premiere/loc_api/dwm_driver/lmh/lmh_spirx_drdy.h
        include/DWM_api/matiere_premiere/loc_api/dwm_driver/lmh/lmh_uartrx.c
        include/DWM_api/matiere_premiere/loc_api/dwm_driver/lmh/lmh_uartrx.h
        include/DWM_api/matiere_premiere/loc_api/include/dwm1001_tlv.h
        include/DWM_api/matiere_premiere/loc_api/include/dwm_api.h
        include/DWM_api/matiere_premiere/loc_api/platform/rpi/hal/hal.c
        include/DWM_api/matiere_premiere/loc_api/platform/rpi/hal/hal.h
        include/DWM_api/matiere_premiere/loc_api/platform/rpi/hal/hal_fprint.c
        include/DWM_api/matiere_premiere/loc_api/platform/rpi/hal/hal_fprint.h
        include/DWM_api/matiere_premiere/loc_api/platform/rpi/hal/hal_gpio.c
        include/DWM_api/matiere_premiere/loc_api/platform/rpi/hal/hal_gpio.h
        include/DWM_api/matiere_premiere/loc_api/platform/rpi/hal/hal_interface.h
        include/DWM_api/matiere_premiere/loc_api/platform/rpi/hal/hal_spi.c
        include/DWM_api/matiere_premiere/loc_api/platform/rpi/hal/hal_spi.h
        include/DWM_api/matiere_premiere/loc_api/platform/rpi/hal/hal_uart.c
        include/DWM_api/matiere_premiere/loc_api/platform/rpi/hal/hal_uart.h
        include/DWM_api/matiere_premiere/loc_api/header.h
        include/DWM_api/matiere_premiere/loc_api/loc_thread.h
        include/DWM_api/matiere_premiere/loc_api/twirtee.h
        include/DWM_api/matiere_premiere/src/loc_thread.c
        include/DWM_api/matiere_premiere/src/main.c
        include/linux-can-utils/include/linux/can/bcm.h
        include/linux-can-utils/include/linux/can/core.h
        include/linux-can-utils/include/linux/can/dev.h
        include/linux-can-utils/include/linux/can/error.h
        include/linux-can-utils/include/linux/can/gw.h
        include/linux-can-utils/include/linux/can/isotp.h
        include/linux-can-utils/include/linux/can/netlink.h
        include/linux-can-utils/include/linux/can/raw.h
        include/linux-can-utils/include/linux/can.h
        include/linux-can-utils/include/socketcan/can/bcm.h
        include/linux-can-utils/include/socketcan/can/error.h
        include/linux-can-utils/include/socketcan/can/gw.h
        include/linux-can-utils/include/socketcan/can/ioctl.h
        include/linux-can-utils/include/socketcan/can/isotp.h
        include/linux-can-utils/include/socketcan/can/netlink.h
        include/linux-can-utils/include/socketcan/can/raw.h
        include/linux-can-utils/include/socketcan/can.h
        include/linux-can-utils/asc2log.c
        include/linux-can-utils/bcmserver.c
        include/linux-can-utils/can-calc-bit-timing.c
        include/linux-can-utils/canbusload.c
        include/linux-can-utils/candump.c
        include/linux-can-utils/canfdtest.c
        include/linux-can-utils/cangen.c
        include/linux-can-utils/cangw.c
        include/linux-can-utils/canlogserver.c
        include/linux-can-utils/canplayer.c
        include/linux-can-utils/cansend.c
        include/linux-can-utils/cansniffer.c
        include/linux-can-utils/cantest.c
        include/linux-can-utils/isotpdump.c
        include/linux-can-utils/isotprecv.c
        include/linux-can-utils/isotpsend.c
        include/linux-can-utils/isotpserver.c
        include/linux-can-utils/isotpsniffer.c
        include/linux-can-utils/isotptun.c
        include/linux-can-utils/lib.c
        include/linux-can-utils/lib.h
        include/linux-can-utils/log2asc.c
        include/linux-can-utils/log2long.c
        include/linux-can-utils/slcan_attach.c
        include/linux-can-utils/slcand.c
        include/linux-can-utils/slcanpty.c
        include/linux-can-utils/terminal.h
        include/can.h
        include/com.h
        include/dijkstra.h
        include/guidance_mgr.h
        include/header.h
        include/jsonApi.h
        include/kalman.h
        include/kanayama.h
        include/localization.h
        include/mat.h
        include/measurement_randomization.h
        include/misc.h
        include/mission_mgr.h
        include/parametres.h
        include/segment.h
        include/simulator.h
        include/speed_selection.h
        include/spf_thread.h
        include/threads_mgr.h
        include/twirtee.h
        src/can.c
        src/dijkstra.c
        src/guidance_mgr.c
        src/jsonApi.c
        src/kalman.c
        src/kanayama.c
        src/localization.c
        src/mat.c
        src/measurement_randomization.c
        src/misc.c
        src/mission_mgr.c
        src/parametres.c
        src/segment.c
        src/simulator.c
        src/speed_selection.c
        src/spf_thread.c
        src/tasks_Scheduler.c
        src/threads_mgr.c
        main.c)
